# libexecinfo-stubs

./: Makefile.am  configure.ac  libexecinfo.pc.in
include/: Makefile.am  execinfo.h
src/: Makefile.am  execinfo.c  test_cpp.cpp
