AC_PREREQ(2.59)
AC_INIT([libexecinfo-stub], [0.0.2])
AC_PROG_CC
AC_CANONICAL_SYSTEM
AC_CONFIG_MACRO_DIRS([m4])
AM_INIT_AUTOMAKE([foreign])
AM_PROG_CC_C_O 
AC_PROG_CXX
LT_INIT
AC_CONFIG_FILES(libexecinfo.pc
                Makefile
                src/Makefile
                include/Makefile)
AC_OUTPUT
